--- a/internal/i18n/json/en.json
+++ b/internal/i18n/json/en.json
@@ -83,7 +83,15 @@
     "validation.redis.host_required": "Redis host is required",
     "validation.redis.port_invalid": "Redis port must be between 1 and 65535",
     "validation.redis.connection_failed": "Failed to connect to Redis",
+    "validation.smtp.server_required": "SMTP server is required",
+    "validation.smtp.server_invalid": "Please enter a valid SMTP server hostname",
+    "validation.smtp.port_invalid": "SMTP port must be between 1 and 65535",
+    "validation.smtp.user_required": "SMTP username is required",
+    "validation.smtp.password_required": "SMTP password is required",
+    "validation.smtp.sender_required": "Sender email is required",
+    "validation.smtp.sender_invalid": "Please enter a valid sender email address",
     "validation.smtp.connection_failed": "Failed to connect to SMTP server",
+    "validation.smtp.tls_failed": "Failed to establish secure connection (STARTTLS failed)",
     "validation.smtp.auth_failed": "SMTP authentication failed",
     "messages.errors.failed_check_status": "Failed to check setup status",
     "messages.errors.setup_already_completed": "Setup has already been completed",
