--- a/internal/i18n/json/zh-Hans.json
+++ b/internal/i18n/json/zh-Hans.json
@@ -83,7 +83,15 @@
     "validation.redis.host_required": "Redis主机地址为必填项",
     "validation.redis.port_invalid": "Redis端口必须在1到65535之间",
     "validation.redis.connection_failed": "连接Redis失败",
+    "validation.smtp.server_required": "SMTP服务器地址为必填项",
+    "validation.smtp.server_invalid": "请输入有效的SMTP服务器主机名",
+    "validation.smtp.port_invalid": "SMTP端口必须在1到65535之间",
+    "validation.smtp.user_required": "SMTP用户名为必填项",
+    "validation.smtp.password_required": "SMTP密码为必填项",
+    "validation.smtp.sender_required": "发件人邮箱为必填项",
+    "validation.smtp.sender_invalid": "请输入有效的发件人邮箱地址",
     "validation.smtp.connection_failed": "连接SMTP服务器失败",
+    "validation.smtp.tls_failed": "建立安全连接失败（STARTTLS失败）",
     "validation.smtp.auth_failed": "SMTP身份验证失败",
     "messages.errors.failed_check_status": "检查设置状态失败",
     "messages.errors.setup_already_completed": "设置已完成",
