--- a/static/i18n/zh-Hans.json
+++ b/static/i18n/zh-Hans.json
@@ -31,6 +31,7 @@
       "redis": "Redis缓存",
       "smtp": "SMTP邮件",
       "application": "应用程序",
+      "oauth": "第三方登录",
       "ssl": "SSL/HTTPS",
       "goaccess": "分析服务",
       "admin_user": "管理员用户",
@@ -229,7 +230,41 @@
       "jwt_generation_title": "如何生成 JWT 私钥",
       "jwt_generation_commands": "<strong>Ed25519（推荐）：</strong><br><code>openssl genpkey -algorithm Ed25519 -out jwt.pem</code><br><br><strong>RSA-3072：</strong><br><code>openssl genrsa -out jwt.pem 3072</code><br><br><strong>设置正确的文件权限：</strong><br><code>chmod 600 jwt.pem</code>"
     },
-    
+
+    "oauth": {
+      "title": "第三方登录配置",
+      "description": "配置 OAuth 提供商，允许用户使用 Google、GitHub 等现有账户登录。所有 OAuth 提供商都是可选的。",
+
+      "google_enable_label": "启用 Google OAuth",
+      "google_enable_help": "允许用户使用 Google 账户登录",
+      "google_client_id_label": "Google 客户端 ID",
+      "google_client_id_placeholder": "输入 Google OAuth 客户端 ID",
+      "google_client_id_help": "从 Google Cloud Console（API 和服务 → 凭据）获取",
+      "google_client_id_error": "启用 Google OAuth 时必须提供客户端 ID",
+      "google_client_secret_label": "Google 客户端密钥",
+      "google_client_secret_placeholder": "输入 Google OAuth 客户端密钥",
+      "google_client_secret_help": "来自 Google Cloud Console 的密钥，请妥善保管",
+      "google_client_secret_error": "启用 Google OAuth 时必须提供客户端密钥",
+
+      "github_enable_label": "启用 GitHub OAuth",
+      "github_enable_help": "允许用户使用 GitHub 账户登录",
+      "github_client_id_label": "GitHub 客户端 ID",
+      "github_client_id_placeholder": "输入 GitHub OAuth 客户端 ID",
+      "github_client_id_help": "从 GitHub 设置 → 开发者设置 → OAuth Apps 获取",
+      "github_client_id_error": "启用 GitHub OAuth 时必须提供客户端 ID",
+      "github_client_secret_label": "GitHub 客户端密钥",
+      "github_client_secret_placeholder": "输入 GitHub OAuth 客户端密钥",
+      "github_client_secret_help": "来自 GitHub OAuth App 设置的密钥，请妥善保管",
+      "github_client_secret_error": "启用 GitHub OAuth 时必须提供客户端密钥",
+
+      "google_docs_description": "官方文档：",
+      "google_docs_link": "Google OAuth 配置指南",
+      "github_docs_description": "官方文档：",
+      "github_docs_link": "GitHub OAuth 应用创建指南",
+
+      "general_note": "OAuth 配置是可选的。您可以仅启用需要的提供商，或者如果只想使用邮箱/密码认证，也可以完全跳过此步骤。"
+    },
+
     "ssl": {
       "title": "SSL/HTTPS 配置",
       "description": "配置 SSL 证书以启用 HTTPS。您可以选择禁用 HTTPS（仅使用 HTTP）或提供证书文件路径以启用安全连接。",
@@ -300,6 +335,7 @@
         "database": "数据库",
         "redis": "Redis缓存",
         "smtp": "邮件服务",
+        "oauth": "第三方登录",
         "ssl": "SSL/HTTPS",
         "goaccess": "分析服务",
         "application": "应用程序",
@@ -330,6 +366,10 @@
         "cors_origins": "CORS 来源",
         "jwt_mode": "JWT 密钥模式",
         "jwt_file_path": "JWT 密钥文件路径",
+        "google_oauth": "Google OAuth",
+        "github_oauth": "GitHub OAuth",
+        "oauth_enabled": "已启用",
+        "oauth_disabled": "已禁用",
         "username": "用户名",
         "email": "邮箱"
       },
