--- a/internal/i18n/json/en.json
+++ b/internal/i18n/json/en.json
@@ -162,6 +162,21 @@
     "validation.redis.host_docker_error": "Redis host must be 'localhost' when using docker compose",
     "validation.redis.password_required": "Redis password is required",
     "validation.redis.password_external_error": "Redis password must be 1-128 characters and cannot contain control characters",
+    "validation.redis.user_required": "Redis username is required for Docker mode",
+    "validation.redis.user_default_forbidden": "Redis username cannot be 'default', this name is reserved for administrator",
+    "validation.redis.user_format_error": "Redis username can only contain letters, numbers, underscores and hyphens",
+    "validation.redis.user_length_error": "Redis username cannot exceed 128 characters",
     "validation.redis.admin_password_required": "Redis CLI management password is required for Docker mode",
-    "validation.redis.admin_password_error": "Redis CLI password must be 12-64 characters with at least 3 types: lowercase, uppercase, numbers, special characters (!@#$%^&*)"
+    "validation.redis.admin_password_error": "Redis CLI password must be 12-64 characters with at least 3 types: lowercase, uppercase, numbers, special characters (!@#$%^&*)",
+    "validation.oauth.google_client_id_required": "Google Client ID is required when Google OAuth is enabled",
+    "validation.oauth.google_client_secret_required": "Google Client Secret is required when Google OAuth is enabled",
+    "validation.oauth.github_client_id_required": "GitHub Client ID is required when GitHub OAuth is enabled",
+    "validation.oauth.github_client_secret_required": "GitHub Client Secret is required when GitHub OAuth is enabled",
+    "validation.app.domain_required": "Domain name is required",
+    "validation.app.brand_required": "Brand name is required",
+    "validation.app.admin_email_required": "Admin email is required",
+    "validation.app.language_required": "Default language is required",
+    "validation.admin.username_required": "Admin username is required",
+    "validation.admin.email_required": "Admin email is required",
+    "validation.admin.password_required": "Admin password is required"
 }
