feat: static host

--- a/internal/i18n/json/en.json
+++ b/internal/i18n/json/en.json
@@ -57,6 +57,7 @@
     "validation.redis.port_error": "Port must be between 1 and 65535",
     "validation.redis.password_error": "Redis password must be 12-64 characters with at least 3 types: lowercase, uppercase, numbers, special characters (!@#$%^&*)",
     "validation.app.domain_error": "Please enter a valid domain name (e.g., example.com) or localhost",
+    "validation.app.static_host_error": "Please enter a valid hostname or hostname:port format",
     "validation.app.brand_error": "Brand name must be 2-50 characters and contain only letters, numbers, spaces, hyphens, and underscores",
     "validation.app.email_error": "Please enter a valid email address",
     "validation.app.cors_error": "Each line should be a valid HTTP/HTTPS URL",
@@ -173,6 +174,7 @@
     "validation.oauth.github_client_id_required": "GitHub Client ID is required when GitHub OAuth is enabled",
     "validation.oauth.github_client_secret_required": "GitHub Client Secret is required when GitHub OAuth is enabled",
     "validation.app.domain_required": "Domain name is required",
+    "validation.app.static_host_required": "Static host name is required",
     "validation.app.brand_required": "Brand name is required",
     "validation.app.admin_email_required": "Admin email is required",
     "validation.app.language_required": "Default language is required",
