--- a/internal/i18n/json/zh-Hans.json
+++ b/internal/i18n/json/zh-Hans.json
@@ -57,6 +57,7 @@
     "validation.redis.port_error": "端口必须在 1 到 65535 之间",
     "validation.redis.password_error": "Redis密码必须是12-64个字符，至少包含3种类型：小写字母、大写字母、数字、特殊字符（!@#$%^&*）",
     "validation.app.domain_error": "请输入有效的域名（例如：example.com）或 localhost",
+    "validation.app.static_host_error": "请输入有效的主机名或主机名:端口格式",
     "validation.app.brand_error": "品牌名称必须是2-50个字符，只能包含字母、数字、空格、连字符和下划线",
     "validation.app.email_error": "请输入有效的邮箱地址",
     "validation.app.cors_error": "每行都应该是有效的 HTTP/HTTPS URL",
@@ -173,6 +174,7 @@
     "validation.oauth.github_client_id_required": "启用GitHub OAuth时必须提供GitHub客户端ID",
     "validation.oauth.github_client_secret_required": "启用GitHub OAuth时必须提供GitHub客户端密钥",
     "validation.app.domain_required": "域名为必填项",
+    "validation.app.static_host_required": "静态主机名为必填项",
     "validation.app.brand_required": "品牌名称为必填项",
     "validation.app.admin_email_required": "管理员邮箱为必填项",
     "validation.app.language_required": "默认语言为必填项",
