--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -178,6 +178,11 @@
       "domain_placeholder": "example.com",
       "domain_error": "Please enter a valid domain name (e.g., example.com) or localhost",
       "use_setup_domain": "Use setup domain",
+
+      "static_host_label": "Static Files Host",
+      "static_host_placeholder": "static.example.com",
+      "static_host_help": "Host for static file resources used in CSP security policy (e.g., static.example.com, cdn.example.com)",
+      "static_host_error": "Please enter a valid hostname or hostname:port format",
       
       "brand_label": "Brand Name",
       "brand_placeholder": "BakLab",
