--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -35,6 +35,7 @@
       "ssl": "SSL/HTTPS",
       "goaccess": "Analytics",
       "admin_user": "Admin User",
+      "frontend": "Frontend",
       "review": "Review",
       "config_complete": "Configuration Complete"
     },
@@ -349,7 +350,7 @@
       "file_too_large": "File size too large. Maximum allowed size is 100MB",
       "geo_file_required": "GeoIP database file is required when GoAccess is enabled"
     },
-    
+
     "admin": {
       "title": "Administrator User",
       "description": "Create the initial administrator account for your application. The email defaults to the system admin email, but you can change it if needed.",
@@ -377,6 +378,9 @@
       "title": "Review Configuration",
       "description": "Please review your configuration before generating the configuration files.",
       "generate_button": "Generate Config",
+      "generating": "Generating...",
+      "generation_failed": "Configuration validation failed. Please check all fields and try again.",
+      "generation_error": "Configuration generation failed. Please try again.",
       
       "sections": {
         "database": "Database",
@@ -443,7 +447,23 @@
       "ready_description": "Manual deployment: <code>cd {{outputPath}} && docker compose -f docker-compose.production.yml --env-file .env.production up -d</code>",
       "complete_button": "Complete Setup"
     },
-    
+
+    "frontend": {
+      "title": "Web Frontend",
+      "description": "Build and configure the web frontend application",
+      "env_vars_title": "Environment Variables",
+      "no_env_vars": "No environment variables configured",
+      "build_status_title": "Build Status",
+      "status_built": "Built",
+      "status_not_built": "Not Built",
+      "last_build": "Last Build",
+      "build_button": "Build Frontend",
+      "building": "Building...",
+      "build_logs": "Build Logs",
+      "build_success": "Frontend built successfully!",
+      "build_failed": "Frontend build failed. Check the logs for details."
+    },
+
     "completed": {
       "title": "Setup Complete!",
       "description": "Your BakLab application has been successfully configured.",
@@ -457,9 +477,10 @@
         "Monitoring: Monitor your services with docker-compose ps",
         "Logs: Check logs with docker-compose logs -f"
       ],
-      
+
       "run_again_button": "Run Setup Again"
     }
+
   },
   
   "messages": {
